# eccx08-with-esp32

./: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/cryptoauthlib/: CMakeLists.txt  component.mk
components/cryptoauthlib/lib/hal/: hal_esp32_i2c.c
main/: component.mk  crypto_settings.h  main.c
main/cryptoauthlib_basic/: component.mk
